Nikola auto commit.
Source commit: 5a541f7b0ad7440ef34e3499ee39eb599b7635ce
Nikola version: 7.8.3

--- a/assets/css/all-nocdn.css
+++ b/assets/css/all-nocdn.css
@@ -3329,10 +3329,9 @@ div.text_cell_render {
 .highlight .vi { color: #19177C } /* Name.Variable.Instance */
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
 
-h2 .title {
+.page-content > .content h2, .page-content > .content h2 a {
   color: #2e2e2e;
 }
-
-.content p {
+.page-content > .content p {
 	margin: 0 0 12px;
 }
