--- a/themes/zen/templates/base.tmpl
+++ b/themes/zen/templates/base.tmpl
@@ -12,6 +12,7 @@ ${template_hooks['extra_head']()}
 </head>
 <body>
     <a href="#page-content" class="sr-only sr-only-focusable">${messages("Skip to main content")}</a>
+    ${template_hooks['page_header']()}
     <section class="social">
         <ul>
         %if logo_url:
@@ -21,7 +22,12 @@ ${template_hooks['extra_head']()}
                 </a>
             </li>
         %endif
-        ${header.html_navigation_links()}
+        ${base.html_navigation_links()}
+        %if search_form:
+            <div class="searchform" role="search">
+                ${search_form}
+            </div>
+        %endif
         </ul>
     </section>
     <section class="page-content">
@@ -31,12 +37,14 @@ ${template_hooks['extra_head']()}
         </div>
     </section>
     ${base.late_load_js()}
+    % if date_fanciness != 0:
     <!-- fancy dates -->
     <script>
-    moment.locale("${momentjs_locales[lang]}");
-    fancydates(${date_fanciness}, ${js_date_format});
+    luxon.Settings.defaultLocale = "${luxon_locales[lang]}";
+    fancydates(${date_fanciness}, ${luxon_date_format});
     </script>
     <!-- end fancy dates -->
+    % endif
     <%block name="extra_js"></%block>
     <script>
     baguetteBox.run('div#content', {
